--- a/Szamitogep neme/stilus.css
+++ b/Szamitogep neme/stilus.css
@@ -1,6 +1,6 @@
-/* * {
+ /* * {
 	border: 1px solid red;
-} */
+} */ 
 
 html {
 	background-color: #fff;
@@ -10,6 +10,11 @@ body {
 	width: 80%;
 	margin: auto;
 	border: 1px solid transparent;
+	padding-bottom: 60px;
+	border-radius: 10px;
+	box-shadow: 5px 5px 8px #333;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 div {
 	/* margin: 10px 10px 10px 10px; Felső/jobb/alsó/bal
@@ -33,4 +38,8 @@ h1, h3 {
 }
 .belso {
 	padding-left: 50px;
+}
+img {
+	width: 150px;
+	float: right;
 }
